--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 <p>📅 Novos episódios todas as semanas!</p>
 
-<div >🎧 Segue-nos nas redes abaixo 👇🏻</div>
+<div class="follow-text">🎧 Segue-nos nas redes abaixo 👇🏻</div>
 
 <div class="links">
   <a href="https://youtube.com/teu_canal" target="_blank" rel="noopener" class="link-button">
