--- a/index.html
+++ b/index.html
@@ -147,15 +147,15 @@
 <div class="follow-text">🎧 Segue-nos nas redes abaixo 👇🏻</div>
 
 <div class="links">
-  <a href="https://youtube.com/teu_canal" target="_blank" rel="noopener" class="link-button">
+  <a href="https://www.youtube.com/@guism_24" target="_blank" rel="noopener" class="link-button">
     <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" alt="YouTube" />
     YouTube
   </a>
-  <a href="https://spotify.com/teu_podcast" target="_blank" rel="noopener" class="link-button">
+  <a href="https://open.spotify.com/show/6848Su1eJ8Y1e3xIT8LrTJ?si=ef7eaab006e64825" target="_blank" rel="noopener" class="link-button">
     <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" alt="Spotify" />
     Spotify
   </a>
-  <a href="https://tiktok.com/@teu_perfil" target="_blank" rel="noopener" class="link-button">
+  <a href="https://www.tiktok.com/@insonso" target="_blank" rel="noopener" class="link-button">
     <img src="https://upload.wikimedia.org/wikipedia/en/a/a9/TikTok_logo.svg" alt="TikTok" />
     TikTok
   </a>
